force-app/main/default/objects/Sponsorship_Tracker__c/Sponsorship_Tracker__c.object-meta.xml
<CustomObject>
    <label>Sponsorship Tracker</label>
    <nameField>
        <displayFormat>ST-{0}</displayFormat>
        <label>Sponsorship Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorship Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>