force-app/main/default/objects/Sponsorship_Tracker__c/fields/Booking_Threshold_value__c.field-meta.xml
<CustomField>
    <fullName>Booking_Threshold_value__c</fullName>
    <description>This is the threshold value for booking.</description>
    <label>Program Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>