force-app/main/default/objects/Sponsorship_Tracker__c/fields/Consumed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Amount__c</fullName>
    <label>Consumed Amount</label>
    <summarizedField>Opportunity_Tracker_Junction__c.Amount_Sponsored__c</summarizedField>
    <summaryForeignKey>Opportunity_Tracker_Junction__c.Sponsorship_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>