force-app/main/default/objects/Sponsorship_Tracker__c/fields/Discount_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Discount_Eligibility__c</fullName>
    <label>Discount Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Paid with PromoCode</fullName>
            </value>
            <value>
                <fullName>Paid + Free with Promocode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>