force-app/main/default/objects/Sponsorship_Tracker__c/fields/Min_Paid_Programs__c.field-meta.xml
<CustomField>
    <fullName>Min_Paid_Programs__c</fullName>
    <inlineHelpText>The count of Paid programs to be booked to let the users get offer of free programs</inlineHelpText>
    <label>Min Paid Programs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>