force-app/main/default/objects/Sponsorship_Tracker__c/fields/Number_Of_Free_Programs_Per_School__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Free_Programs_Per_School__c</fullName>
    <inlineHelpText>The count of free programs that can be availed by the School</inlineHelpText>
    <label>Number Of Free Programs Per School</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>