force-app/main/default/objects/Sponsorship_Tracker__c/fields/Number_of_Programs_Booked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs_Booked__c</fullName>
    <label>Number of Programs Booked</label>
    <summarizedField>Opportunity_Tracker_Junction__c.Number_of_Programs_Sponsored__c</summarizedField>
    <summaryForeignKey>Opportunity_Tracker_Junction__c.Sponsorship_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>