force-app/main/default/objects/Sponsorship_Tracker__c/fields/Number_of_Programs_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs_Sponsored__c</fullName>
    <label>Number of Programs Sponsored</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>