force-app/main/default/objects/Sponsorship_Tracker__c/fields/Number_of_Remaining_Programs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Remaining_Programs__c</fullName>
    <formula>Number_of_Programs_Sponsored__c - Number_of_Programs_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Remaining Programs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>