force-app/main/default/objects/Sponsorship_Tracker__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorship Trackers</relationshipLabel>
    <relationshipName>Sponsorship_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>