force-app/main/default/objects/Sponsorship_Tracker__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <formula>&apos;BZ-&apos; + Organisation__r.Abbreviation__c + &apos;-&apos; + RIGHT(TEXT(YEAR(TODAY())), 2) + &apos;-&apos; + RIGHT(Name, LEN(Name) - FIND(&quot;-&quot;, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Code</label>
    <type>Text</type>
</CustomField>