force-app/main/default/objects/Sponsorship_Tracker__c/fields/Promo_Code_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Expiry_Date__c</fullName>
    <label>Promo Code Expiry Date</label>
    <type>Date</type>
</CustomField>