force-app/main/default/objects/Sponsorship_Tracker__c/validationRules/Discount_is_not_greater_than.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_is_not_greater_than</fullName>
    <active>true</active>
    <errorConditionFormula>Discount__c  &gt; 1.0</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount should not be greater than 26 %.</errorMessage>
</ValidationRule>