force-app/main/default/objects/Sponsorship_Tracker__c/validationRules/discount_required.validationRule-meta.xml
<ValidationRule>
    <fullName>discount_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Discount_Eligibility__c, &quot;Only Paid with PromoCode&quot;),
OR(
ISBLANK( Discount__c ),
Discount__c = 0
)
)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Please enter discount greater then 0</errorMessage>
</ValidationRule>