force-app/main/default/objects/Sponsorship_Tracker__c/validationRules/DoNotRequireForPaidWithPromo.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotRequireForPaidWithPromo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISBLANK(Number_Of_Free_Programs_Per_School__c),
        Number_Of_Free_Programs_Per_School__c = 0
    ),
    OR(
        ISBLANK(TEXT(Discount_Eligibility__c)),
        ISPICKVAL(Discount_Eligibility__c, &quot;Paid + Free with PromoCode&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Number_Of_Free_Programs_Per_School__c</errorDisplayField>
    <errorMessage>Please mention Number of Free Programs</errorMessage>
</ValidationRule>