force-app/main/default/objects/Sponsorship_Tracker__c/validationRules/Maximum_No_Of_Free_Programs_Per_School.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_No_Of_Free_Programs_Per_School</fullName>
    <active>true</active>
    <errorConditionFormula>Number_Of_Free_Programs_Per_School__c &gt; 4 || Number_Of_Free_Programs_Per_School__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_Of_Free_Programs_Per_School__c</errorDisplayField>
    <errorMessage>Each school must offer more than 0 and no more than 4 free programs.</errorMessage>
</ValidationRule>