force-app/main/default/objects/Sponsorship_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Promo_Code__c</columns>
    <columns>Promo_Code_Expiry_Date__c</columns>
    <columns>Allocated_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Consumed_Amount__c</columns>
    <columns>Number_Of_Free_Programs_Per_School__c</columns>
    <columns>Number_of_Programs_Booked__c</columns>
    <columns>Number_of_Programs_Sponsored__c</columns>
    <columns>Number_of_Remaining_Programs__c</columns>
    <columns>Booking_Threshold_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>